<resources>
    <string name="app_name">Ho-La</string>
    <string name="chats">Chats</string>
    <string name="posts">Posts</string>
    <string name="profile">Profile</string>
    <string name="app_description">Chatting and Sharing Posts!</string>
    <string name="username_or_email_address">Username or email address</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_up">SIGN UP</string>
    <string name="loading">Loading...</string>
    <string name="logging_in">Logging in...</string>
    <string name="creating_account">Creating account...</string>
    <string name="empty_user">Empty Username/Email</string>
    <string name="empty_user_msg">Please provide your username or email address.</string>
    <string name="empty_password">Empty Password</string>
    <string name="empty_password_msg">Please provide your password.</string>
    <string name="log_in_failed">Log In Failed</string>
    <string name="log_in_failed_msg">Wrong username/email or password! Please try again.</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_name_msg">Name can\'t be more than 30 characters and should only contain alphabet.</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_username_msg">Username must have 3–15 characters. Every character should be either alphabet or number.</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="invalid_email_msg">Please provide a valid email address.</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_password_msg">Password must have 8–32 characters.</string>
    <string name="invalid_username_or_email">Invalid Username or Email</string>
    <string name="invalid_username_or_email_msg">The username or email address already in use.</string>
    <string name="ok">OK</string>
    <string name="error">ERROR</string>
    <string name="error_msg">Something went wrong. Please try again.</string>
    <string name="log_out">Log Out</string>
    <string name="log_out_msg">Do you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change_image">Change Image</string>
    <string name="start_chat">Start Chat</string>
    <string name="uploading_image">Uploading image...</string>
    <string name="preparing_chat">Preparing chat...</string>
    <string name="search_user">Search user</string>
    <string name="no_user_found">No user found.</string>
    <string name="latest_message">Latest message</string>
    <string name="_1">1</string>
    <string name="no_chat">You don\'t have any chat.\nSearch someone to chat with.</string>
    <string name="type_your_message">Type your message</string>
    <string name="message">Message</string>
    <string name="date">dd MMM yyyy HH:mm</string>
    <string name="new_messages">New Messages</string>
    <string name="content">Content</string>
    <string name="read_more">Read More</string>
    <string name="show_less">Show Less</string>
    <string name="_1_000_likes">1,000 likes</string>
    <string name="_1_000_comments">1,000 comments</string>
    <string name="no_post_1">No one has posted anything.\nBe the first one to post.</string>
    <string name="no_post_2">Nothing has been posted.</string>
    <string name="add_post">Add Post</string>
    <string name="content_of_your_post">Content of your post</string>
    <string name="add_image">Add Image</string>
    <string name="remove_image">Remove Image</string>
    <string name="empty_post">Empty Post</string>
    <string name="empty_post_msg">The post is empty. Please provide the content of your post.</string>
    <string name="post">Post</string>
    <string name="posting">Posting...</string>
    <string name="delete_post">Delete Post</string>
    <string name="delete_post_msg">Do you want to delete this post?</string>
    <string name="deleting_post">Deleting post...</string>
    <string name="loading_comments">Loading comments...</string>
    <string name="comment">Comment</string>
    <string name="type_your_comment">Type your comment</string>
    <string name="no_comment">No one has commented anything.\nBe the first one to comment.</string>
</resources>