<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_cream_gradient"
    android:padding="25dp"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".activities.LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/rose"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/app_description"
            android:textColor="@color/rose"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTxtUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:paddingVertical="15dp"
            android:paddingHorizontal="12dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:hint="@string/username_or_email_address"
            android:textColorHint="@color/gray"
            android:inputType="text"
            android:maxLength="100"
            android:importantForAutofill="no"
            android:autofillHints="text"
            android:imeOptions="actionNext" />

        <EditText
            android:id="@+id/editTxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bg_input"
            android:paddingVertical="15dp"
            android:paddingHorizontal="12dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:hint="@string/password"
            android:textColorHint="@color/gray"
            android:inputType="textPassword"
            android:maxLength="32"
            android:importantForAutofill="no"
            android:autofillHints="text"
            android:imeOptions="actionDone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_rose"
            android:paddingVertical="10dp"
            android:text="@string/log_in"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/create_new_account"
            android:textColor="@color/dark_rose"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>