<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="12dp">

    <TextView
        android:id="@+id/textNewMessages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_new_messages_label"
        android:paddingVertical="5dp"
        android:text="@string/new_messages"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAlignment="center"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_received_message"
        android:paddingVertical="8dp"
        android:paddingHorizontal="15dp"
        android:text="@string/message"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:maxWidth="200dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textNewMessages" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="200dp"
        android:text="@string/date"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/textMessage"
        app:layout_constraintTop_toBottomOf="@id/textMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>