<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="25dp"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:fillViewport="true"
    tools:context=".fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@color/ivory"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/RoundedImageView"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/textChangeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_image"
            android:textAllCaps="true"
            android:textColor="@color/light_rose_2"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="@id/imageProfile"
            app:layout_constraintStart_toStartOf="@id/imageProfile"
            app:layout_constraintTop_toBottomOf="@+id/imageProfile" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/dark_rose"
            android:textSize="28sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="0"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageProfile"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/rose"
            android:textSize="20sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="0"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="35dp"
            android:layout_marginStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageProfile"
            app:layout_constraintTop_toTopOf="@id/textName" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textColor="@color/light_rose_1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="0"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageProfile"
            app:layout_constraintTop_toTopOf="@id/textUsername" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_rose_1"
            android:text="@string/start_chat"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageProfile"
            app:layout_constraintTop_toTopOf="@id/textUsername" />

        <TextView
            android:id="@+id/textPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posts"
            android:textColor="@color/dark_rose"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageProfile" />

        <TextView
            android:id="@+id/textAddPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_post"
            android:textAllCaps="true"
            android:textColor="@color/light_rose_2"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/textPosts"
            app:layout_constraintTop_toTopOf="@+id/textPosts" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentPost"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textPosts" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>