<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageProfile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@color/ivory"
        android:scaleType="centerCrop"
        app:shapeAppearance="@style/RoundedImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/dark_rose"
        android:textSize="25sp"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="15dp"
        app:layout_constraintEnd_toStartOf="@id/textUnreadMessages"
        app:layout_constraintStart_toEndOf="@id/imageProfile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="15dp"
        app:layout_constraintEnd_toStartOf="@id/textUnreadMessages"
        app:layout_constraintStart_toEndOf="@id/imageProfile"
        app:layout_constraintTop_toBottomOf="@id/textName" />

    <TextView
        android:id="@+id/textLatestMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/latest_message"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        android:visibility="gone"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="15dp"
        app:layout_constraintEnd_toStartOf="@id/textUnreadMessages"
        app:layout_constraintStart_toEndOf="@id/imageProfile"
        app:layout_constraintTop_toBottomOf="@id/textName" />

    <TextView
        android:id="@+id/textUnreadMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_unread_messages"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:paddingVertical="5dp"
        android:paddingHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="@id/textLatestMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textName" />

</androidx.constraintlayout.widget.ConstraintLayout>