<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    android:paddingVertical="15dp"
    android:paddingHorizontal="20dp"
    tools:context=".activities.AddPostActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_post"
        android:textSize="30sp"
        android:textColor="@color/dark_rose"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@id/imageBack"
        app:layout_constraintStart_toEndOf="@id/imageBack"
        app:layout_constraintTop_toTopOf="@id/imageBack" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:paddingTop="30dp"
        android:paddingBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageBack">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTxtContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:hint="@string/content_of_your_post"
                android:textColorHint="@color/gray"
                android:inputType="textMultiLine"
                android:maxLength="1000"
                android:maxLines="100"
                android:importantForAutofill="no"
                android:autofillHints="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageContent"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="15dp"
                android:scaleType="centerCrop"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTxtContent"
                app:srcCompat="@drawable/post_image" />

            <TextView
                android:id="@+id/textAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                android:textSize="20sp"
                android:textColor="@color/dark_rose"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageContent" />

            <TextView
                android:id="@+id/textRemoveImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_image"
                android:textSize="20sp"
                android:textColor="@color/dark_rose"
                android:textStyle="bold"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textAddImage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/rose"
                android:text="@string/post"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textRemoveImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>