<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="15dp"
        app:cardBackgroundColor="@color/cream"
        app:cardElevation="10dp"
        app:cardCornerRadius="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/viewProfile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageProfile"
                app:layout_constraintEnd_toEndOf="@id/textUsername"
                app:layout_constraintStart_toStartOf="@id/imageProfile"
                app:layout_constraintTop_toTopOf="@id/imageProfile" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/ivory"
                android:scaleType="centerCrop"
                app:shapeAppearance="@style/RoundedImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/user" />

            <TextView
                android:id="@+id/textUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/username"
                android:textColor="@color/dark_rose"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginEnd="100dp"
                android:layout_marginStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageProfile"
                app:layout_constraintTop_toTopOf="@id/imageProfile" />

            <TextView
                android:id="@+id/textDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/imageProfile"
                app:layout_constraintStart_toStartOf="@id/textUsername"
                app:layout_constraintTop_toBottomOf="@id/textUsername" />

            <TextView
                android:id="@+id/textComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageProfile" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textComment"
                app:srcCompat="@drawable/ic_outlined_like" />

            <TextView
                android:id="@+id/textLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_000_likes"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@id/imageLike"
                app:layout_constraintStart_toEndOf="@id/imageLike"
                app:layout_constraintTop_toTopOf="@id/imageLike" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>